...
    }()
    
    private let logoutButton: UIButton = {
        let button = UIButton()
        button.setImage(UIImage(named: "log out"), for: .normal)
        button.tintColor = .ypRed
        button.accessibilityIdentifier = "logout button"
        button.addTarget(self, action: #selector(didTapLogoutButton), for: .touchUpInside)
        return button
    }()
    
    private let nameLabel: UILabel = {
        let label = UILabel()
...
    
    func showLogoutAlert(vc: ProfileViewController) {
        let alertModel = AlertModel(
            title: "Пока, пока!",
            message: "Уверенные что хотите выйти?",
            buttons: [.yesButton, .noButton],
            identifier: "Logout",
            completion: {
                self.profileLogoutService.logout()
            }
        )
        AlertPresenter.showAlert(on: vc, model: alertModel)
    }
...
